--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -1,20 +1,27 @@
 {
-  "name": "@vitamin/playground",
-  "version": "0.0.0",
-  "scripts": {
-    "build:watch": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
-  },
   "dependencies": {
-    "vue": "^3.0.5",
-    "@vitamin/ui": "1.0.0"
+    "@vitamin/ui": "1.0.0",
+    "vue": "^3.0.5"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "@vitejs/plugin-vue": "^1.1.5",
     "@vue/compiler-sfc": "^3.0.5",
+    "@vue/eslint-config-typescript": "^7.0.0",
+    "@websublime/eslint-config": "^1.2.1",
+    "eslint": "^7.23.0",
+    "eslint-plugin-vue": "^7.8.0",
     "typescript": "^4.1.3",
     "vite": "^2.1.3",
     "vue-tsc": "^0.0.8"
-  }
+  },
+  "name": "@vitamin/playground",
+  "scripts": {
+    "build": "vue-tsc --noEmit && vite build",
+    "build:watch": "vite",
+    "lint": "eslint . --ext .vue,.js,.ts",
+    "serve": "vite preview"
+  },
+  "version": "0.0.0"
 }
