--- a/packages/vitamin/package.json
+++ b/packages/vitamin/package.json
@@ -1,22 +1,7 @@
 {
-  "name": "@vitamin/ui",
-  "version": "1.0.0",
-  "description": "Vue UI components",
   "author": "Miguel Ramos",
-  "license": "MIT",
-  "private": false,
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "unpkg": "dist/vitamin.min.js",
-  "typings": "types/index.d.ts",
-  "files": [
-    "dist",
-    "types/*.d.ts"
-  ],
+  "description": "Vue UI components",
   "devDependencies": {
-    "tailwindcss": "^2.0.4",
-    "postcss": "^8.2.8",
-    "autoprefixer": "^10.2.5",
     "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
     "@rollup/plugin-babel": "^5.3.0",
@@ -29,6 +14,8 @@
     "@typescript-eslint/parser": "^4.19.0",
     "@vue/compiler-sfc": "^3.0.9",
     "@vue/eslint-config-typescript": "^7.0.0",
+    "@websublime/eslint-config": "^1.2.1",
+    "autoprefixer": "^10.2.5",
     "clean-css-cli": "^5.2.2",
     "codecov": "^3.8.1",
     "concurrently": "^6.0.0",
@@ -36,6 +23,7 @@
     "eslint": "^7.23.0",
     "eslint-plugin-vue": "^7.8.0",
     "jest-serializer-vue": "^2.0.2",
+    "postcss": "^8.2.8",
     "rollup": "^2.44.0",
     "rollup-copy-plugin": "^0.1.0",
     "rollup-plugin-eslint": "^7.0.0",
@@ -43,14 +31,25 @@
     "rollup-plugin-typescript2": "^0.30.0",
     "rollup-plugin-vue": "^6.0.0",
     "sinon": "^10.0.0",
+    "tailwindcss": "^2.0.4",
     "typescript": "^4.2.3",
     "vue": "^3.0.0"
   },
+  "files": ["dist", "types/*.d.ts"],
+  "license": "MIT",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "name": "@vitamin/ui",
   "peerDependencies": {
     "vue": "^3.0.0"
   },
+  "private": false,
   "scripts": {
     "build": "rimraf dist && rollup -c && rollup -c --environment MINIFY",
-    "build:watch": "rollup -c --watch"
-  }
+    "build:watch": "rollup -c --watch",
+    "lint": "eslint . --ext .vue,.js,.ts"
+  },
+  "typings": "types/index.d.ts",
+  "unpkg": "dist/vitamin.min.js",
+  "version": "1.0.0"
 }
