--- a/packages/vitamin/package.json
+++ b/packages/vitamin/package.json
@@ -24,6 +24,9 @@
     "eslint-plugin-vue": "^7.8.0",
     "jest-serializer-vue": "^2.0.2",
     "postcss": "^8.2.8",
+    "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.0.0",
+    "postcss-nested": "^5.0.5",
     "rollup": "^2.44.0",
     "rollup-copy-plugin": "^0.1.0",
     "rollup-plugin-eslint": "^7.0.0",
@@ -45,7 +48,9 @@
   },
   "private": false,
   "scripts": {
-    "build": "rimraf dist && rollup -c && rollup -c --environment MINIFY",
+    "build": "rimraf dist && rollup -c && rollup -c --environment MINIFY && yarn build:css",
+    "build:css": "postcss ./src/theme/index.css -o ./dist/theme.css",
+    "build:css:watch": "postcss ./src/theme/index.css -o ./dist/theme.css -w",
     "build:watch": "rollup -c --watch",
     "lint": "eslint . --ext .vue,.js,.ts"
   },
