--- a/packages/vitamin/package.json
+++ b/packages/vitamin/package.json
@@ -36,7 +36,8 @@
     "sinon": "^10.0.0",
     "tailwindcss": "^2.0.4",
     "typescript": "^4.2.3",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "@iconify/vue": "^2.0.0-rc.1"
   },
   "files": ["dist", "types/*.d.ts"],
   "license": "MIT",
@@ -51,7 +52,7 @@
     "build": "rimraf dist && rollup -c && rollup -c --environment MINIFY && yarn build:css",
     "build:css": "postcss ./src/theme/index.css -o ./dist/theme.css",
     "build:css:watch": "postcss ./src/theme/index.css -o ./dist/theme.css -w",
-    "build:watch": "rollup -c --watch",
+    "build:watch": "concurrently \"rollup -c --watch\" \"yarn build:css:watch\"",
     "lint": "eslint . --ext .vue,.js,.ts"
   },
   "typings": "types/index.d.ts",
