--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "build:watch": "lerna run build:watch --parallel --scope=@vitamin/{ui,playground}",
     "lint:vitamin": "lerna run lint --parallel --scope=@vitamin/{ui,playground}",
     "postinstall": "yarn build:lib",
-    "start": "yarn build:watch"
+    "start": "yarn build:watch",
+    "test": "lerna run test --parallel --scope @vitamin/ui"
   },
   "version": "1.0.0",
   "workspaces": ["packages/*"]
