--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -6,15 +6,24 @@
   "devDependencies": {
     "@iconify/json": "^1.1.323",
     "@iconify/vue": "^2.0.0-rc.1",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
     "@vitejs/plugin-vue": "^1.1.5",
     "@vue/compiler-sfc": "^3.0.5",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vueuse/core": "^4.6.2",
-    "@websublime/eslint-config": "^1.2.1",
     "eslint": "^7.23.0",
+    "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-vue": "^7.8.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-new-with-error": "^2.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-sort-class-members": "^1.11.0",
+    "eslint-plugin-sort-destructure-keys": "^1.3.5",
+    "eslint-plugin-switch-case": "^1.1.2",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.3",
     "vite": "^2.1.3",
     "vite-plugin-vuedoc": "^3.1.3",
