--- a/packages/vitamin/package.json
+++ b/packages/vitamin/package.json
@@ -4,29 +4,47 @@
   "devDependencies": {
     "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
+    "@babel/types": "^7.13.14",
+    "@iconify/vue": "^2.0.0-rc.1",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/jest": "^26.0.22",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
     "@vue/compiler-sfc": "^3.0.9",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "@websublime/eslint-config": "^1.2.1",
+    "@vue/test-utils": "^2.0.0-rc.4",
     "autoprefixer": "^10.2.5",
+    "babel-jest": "^26.6.3",
+    "babel-preset-jest": "^26.6.2",
     "clean-css-cli": "^5.2.2",
     "codecov": "^3.8.1",
     "concurrently": "^6.0.0",
     "core-js": "^3.9.1",
     "eslint": "^7.23.0",
+    "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-vue": "^7.8.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-new-with-error": "^2.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-sort-class-members": "^1.11.0",
+    "eslint-plugin-sort-destructure-keys": "^1.3.5",
+    "eslint-plugin-switch-case": "^1.1.2",
+    "jest": "^26.6.3",
     "jest-serializer-vue": "^2.0.2",
+    "jsdom": "^16.5.2",
+    "jsdom-global": "^3.0.2",
     "postcss": "^8.2.8",
     "postcss-cli": "^8.3.1",
     "postcss-import": "^14.0.0",
     "postcss-nested": "^5.0.5",
+    "prettier": "^2.2.1",
     "rollup": "^2.44.0",
     "rollup-copy-plugin": "^0.1.0",
     "rollup-plugin-eslint": "^7.0.0",
@@ -35,9 +53,11 @@
     "rollup-plugin-vue": "^6.0.0",
     "sinon": "^10.0.0",
     "tailwindcss": "^2.0.4",
+    "ts-jest": "^26.5.4",
+    "ts-loader": "^8.1.0",
     "typescript": "^4.2.3",
     "vue": "^3.0.0",
-    "@iconify/vue": "^2.0.0-rc.1"
+    "vue-jest": "^5.0.0-alpha.8"
   },
   "files": ["dist", "types/*.d.ts"],
   "license": "MIT",
@@ -53,7 +73,8 @@
     "build:css": "postcss ./src/theme/index.css -o ./dist/theme.css",
     "build:css:watch": "postcss ./src/theme/index.css -o ./dist/theme.css -w",
     "build:watch": "concurrently \"rollup -c --watch\" \"yarn build:css:watch\"",
-    "lint": "eslint . --ext .vue,.js,.ts"
+    "lint": "eslint . --ext .vue,.js,.ts",
+    "test": "jest"
   },
   "typings": "types/index.d.ts",
   "unpkg": "dist/vitamin.min.js",
