--- a/packages/vitamin/package.json
+++ b/packages/vitamin/package.json
@@ -15,6 +15,7 @@
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "@vue/compiler-sfc": "^3.0.9",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-rc.4",
     "autoprefixer": "^10.2.5",
@@ -25,10 +26,8 @@
     "concurrently": "^6.0.0",
     "core-js": "^3.9.1",
     "eslint": "^7.23.0",
-    "eslint-plugin-jest": "^24.3.2",
-    "eslint-plugin-vue": "^7.8.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-new-with-error": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -36,6 +35,7 @@
     "eslint-plugin-sort-class-members": "^1.11.0",
     "eslint-plugin-sort-destructure-keys": "^1.3.5",
     "eslint-plugin-switch-case": "^1.1.2",
+    "eslint-plugin-vue": "^7.8.0",
     "jest": "^26.6.3",
     "jest-serializer-vue": "^2.0.2",
     "jsdom": "^16.5.2",
@@ -63,11 +63,14 @@
   "license": "MIT",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "name": "@vitamin/ui",
+  "name": "@websublime/vitamin-ui",
   "peerDependencies": {
     "vue": "^3.0.0"
   },
   "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "rimraf dist && rollup -c && rollup -c --environment MINIFY && yarn build:css",
     "build:css": "postcss ./src/theme/index.css -o ./dist/theme.css",
