--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -10,24 +10,31 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+
+      - name: Setup node
+        uses: actions/setup-node@v2
         with:
-          node-version: 12
-      - run: yarn
-      - run: yarn test
+          node-version: '12'
+
+      - name: Install dependencies
+        run: yarn bootstrap
+
+      - name: Test
+        run: yarn test
 
   release:
     name: Release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
 
       - name: Setup Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
-          node-version: 12
+          node-version: '12'
 
       - name: Install Dependencies
         run: yarn bootstrap
@@ -41,13 +48,20 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+
+      - name: Setup node
+        uses: actions/setup-node@v2
         with:
-          node-version: 12
+          node-version: '12'
           registry-url: https://registry.npmjs.org/
-      - run: yarn bootstrap
-      - run: yarn publish-ci
+
+      - name: Install Dependencies
+        run: yarn bootstrap
+
+      - name: Publish NPM
+        run: yarn publish-ci
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
@@ -55,13 +69,20 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+
+      - name: Setup node
+        uses: actions/setup-node@v2
         with:
-          node-version: 12
+          node-version: '12'
           registry-url: https://npm.pkg.github.com/
           scope: "@websublime"
-      - run: yarn bootstrap
-      - run: yarn publish-ci
+
+      - name: Install Dependencies
+        run: yarn bootstrap
+
+      - name: Publish Github
+        run: yarn publish-ci
         env:
           NODE_AUTH_TOKEN: ${{secrets.GH_TOKEN}}
