fix: trying to fix tokens actions

--- a/.github/workflows/master-deploy.yml
+++ b/.github/workflows/master-deploy.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: Build Website
         run: yarn build
+        env:
+          CI: true
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@3.7.1
