--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - master
       - main
+env:
+  CI: true
 
 jobs:
   build:
@@ -57,6 +59,7 @@ jobs:
         with:
           node-version: '12'
           registry-url: https://registry.npmjs.org/
+          scope: "@websublime"
 
       - name: Install Dependencies
         run: yarn bootstrap
@@ -64,6 +67,7 @@ jobs:
       - name: Publish NPM
         run: yarn publish-ci
         env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
 
   publish-gpr:
@@ -86,4 +90,5 @@ jobs:
       - name: Publish Github
         run: yarn publish-ci
         env:
+          NODE_AUTH_TOKEN: ${{secrets.GH_TOKEN}}
           GITHUB_TOKEN: ${{secrets.GH_TOKEN}}
