--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "postinstall": "yarn build:lib",
     "start": "yarn build:watch",
     "test": "lerna run test --parallel --scope @websublime/vitamin-ui",
-    "publish-ci": "lerna publish from-package -y --no-verify-access --ignore=@websublime/vitamin-play"
+    "publish-ci": "lerna publish from-package -y --no-verify-access"
   },
   "version": "1.0.0",
   "workspaces": [
