--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -65,10 +65,15 @@ jobs:
         run: yarn bootstrap
 
       - name: Publish NPM
-        run: yarn publish-ci
+        run: |
+          echo "//registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN" > .npmrc
+          echo '@websublime:registry=https://registry.npmjs.org' >> .npmrc
+          cat .npmrc
+          yarn publish-ci
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
   publish-gpr:
     needs: build
@@ -88,7 +93,12 @@ jobs:
         run: yarn bootstrap
 
       - name: Publish Github
-        run: yarn publish-ci
+        run: |
+          echo "//npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN" > .npmrc
+          echo '@websublime:registry=https://npm.pkg.github.com' >> .npmrc
+          cat .npmrc
+          yarn publish-ci
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GH_TOKEN}}
-          GITHUB_TOKEN: ${{secrets.GH_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
