--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
   "author": {
+    "email": "miguel.marques.ramos@gmail.com",
     "name": "Miguel Ramos",
-    "url": "https://miguelramos.dev",
-    "email": "miguel.marques.ramos@gmail.com"
+    "url": "https://miguelramos.dev"
   },
   "bugs": {
     "url": "https://github.com/websublime/vitamin/issues"
   },
   "description": "Vitamin components",
   "devDependencies": {
+    "@changesets/changelog-github": "^0.3.0",
     "@changesets/cli": "^2.14.1",
-    "lerna": "^4.0.0"
+    "@changesets/get-github-info": "^0.5.0",
+    "bundlesize": "^0.18.1",
+    "husky": "^6.0.0",
+    "lerna": "^4.0.0",
+    "lint-staged": "^10.5.4"
   },
-  "keywords": [
-    "components",
-    "vue",
-    "ui",
-    "lib"
-  ],
+  "keywords": ["components", "vue", "ui", "lib"],
   "license": "MIT",
-  "name": "@websublime/vitamin",
+  "name": "root",
   "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/websublime/vitamin"
   },
   "scripts": {
-    "bootstrap": "yarn --frozen-lockfile && lerna bootstrap",
+    "bootstrap": "lerna bootstrap --use-workspaces",
     "build": "lerna run build --scope=@websublime/{vitamin-ui,vitamin-play} --include-dependencies",
-    "build:play": "lerna run build --parallel --scope @websublime/vitamin-play",
     "build:lib": "lerna run build --parallel --scope @websublime/vitamin-ui",
     "build:lib:watch": "lerna run build:watch --parallel --scope @websublime/vitamin-ui",
+    "build:play": "lerna run build --parallel --scope @websublime/vitamin-play",
     "build:watch": "lerna run build:watch --parallel --scope=@websublime/{vitamin-ui,vitamin-play}",
+    "clean": "lerna run clean",
+    "evalbundle": "bundlesize",
     "lint": "lerna run lint --parallel --scope=@websublime/{vitamin-ui,vitamin-play}",
-    "postinstall": "yarn build:lib",
+    "postinstall": "lerna link && yarn build:lib",
+    "publish-ci": "lerna publish from-package -y --no-verify-access",
+    "release": "yarn changeset publish",
     "start": "yarn build:watch",
-    "test": "lerna run test --parallel --scope @websublime/vitamin-ui",
-    "publish-ci": "lerna publish from-package -y --no-verify-access"
+    "test": "lerna run test --parallel --scope @websublime/vitamin-ui"
   },
   "version": "1.0.0",
-  "workspaces": [
-    "packages/*"
-  ]
+  "workspaces": ["packages/*"]
 }
