fix: deploy action

--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -44,6 +44,8 @@ jobs:
             //registry.npmjs.org/:_authToken=$NPM_TOKEN
             @websublime:registry=https://registry.npmjs.org
           EOF
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Publish packages
         uses: changesets/action@master
@@ -51,8 +53,6 @@ jobs:
           publish: yarn release
           title: "chore(release): version packages"
           commit: "chore(release): version packages"
-          registry-url: https://registry.npmjs.org/
-          scope: "@websublime"
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
