--- a/packages/playground/tsconfig.json
+++ b/packages/playground/tsconfig.json
@@ -11,7 +11,7 @@
     "lib": ["esnext", "dom"],
     "types": ["vite/client"],
     "paths": {
-      "@websublime/vitamin-ui": ["../vitamin"]
+      "@websublime/vitamin-ui/*": ["../vitamin"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
