fix: production style missing classes

--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -32,7 +32,7 @@
   },
   "name": "@websublime/vitamin-play",
   "scripts": {
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vue-tsc --noEmit && vite build --mode=production",
     "build:watch": "vite",
     "lint": "eslint . --ext .vue,.js,.ts",
     "serve": "vite preview"
