--- a/packages/vitamin/package.json
+++ b/packages/vitamin/package.json
@@ -56,6 +56,7 @@
     "postcss-import": "^14.0.0",
     "postcss-nested": "^5.0.5",
     "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
     "rollup": "^2.44.0",
     "rollup-copy-plugin": "^0.1.0",
     "rollup-plugin-eslint": "^7.0.0",
