--- a/packages/vitamin/package.json
+++ b/packages/vitamin/package.json
@@ -12,7 +12,7 @@
     "max-size": "85KB"
   },
   "description": "Vue UI components",
-  "dependencies": {
+  "devDependencies": {
     "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
     "@babel/types": "^7.13.14",
