--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -12,10 +12,10 @@
     "@vue/compiler-sfc": "^3.0.5",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vueuse/core": "^4.6.2",
+    "autoprefixer": "^10.2.5",
     "eslint": "^7.23.0",
-    "eslint-plugin-jest": "^24.3.2",
-    "eslint-plugin-vue": "^7.8.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-new-with-error": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -23,13 +23,19 @@
     "eslint-plugin-sort-class-members": "^1.11.0",
     "eslint-plugin-sort-destructure-keys": "^1.3.5",
     "eslint-plugin-switch-case": "^1.1.2",
+    "eslint-plugin-vue": "^7.8.0",
+    "postcss": "^8.2.8",
+    "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.0.0",
+    "postcss-nested": "^5.0.5",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
+    "tailwindcss": "^2.0.4",
     "typescript": "^4.1.3",
     "vite": "^2.1.3",
     "vite-plugin-vuedoc": "^3.1.3",
     "vue-router": "^4.0.5",
-    "vue-tsc": "^0.0.8"
+    "vue-tsc": "^0.0.21"
   },
   "name": "@websublime/vitamin-play",
   "scripts": {
