--- a/packages/vitamin/tsconfig.json
+++ b/packages/vitamin/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
+    "allowJs": true,
     "target": "esnext",
     "module": "esnext",
     "strict": true,
-    "jsx": "preserve",
+    "jsx": "react",
     "importHelpers": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
@@ -15,7 +16,6 @@
     "noImplicitAny": false,
     "strictNullChecks": false,
     "baseUrl": ".",
-
     "paths": {
       "@/*": [
         "src/*"
