feat: core component mixin and utils

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "description": "",
   "scripts": {
     "lint": "pnpm --filter \"@websublime/*\" lint",
+    "build": "pnpm --filter \"@websublime/*\" build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
