--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,5 @@
+registry=https://registry.npmjs.org/
+@websublime:registry=https://npm.pkg.github.com/
 shamefully-hoist=true
 strict-peer-dependencies=false
 side-effects-cache=false
