--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -16,5 +16,9 @@
   "snapshot": {
     "useCalculatedVersion": true,
     "prereleaseTemplate": "{timestamp}-{commit}"
+  },
+  "___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
+    "updateInternalDependents": "always",
+    "onlyUpdatePeerDependentsWhenOutOfRange": true
   }
 }
