--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          token: ${{ secrets.GH_TOKEN }}
 
       - name: Setup node
         uses: actions/setup-node@v3
@@ -48,11 +49,14 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Build
+        run: pnpm build
+
       - name: Create Snapshot
-        uses: changesets/action@v1
+        uses: changesets/action@v1.4.5
         with:
           version: pnpm snapshot:version
-          publish: pnpm snapshot:publish
+          publish: pnpm build && pnpm snapshot:publish
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.GH_TOKEN }}
