--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint": "pnpm --filter \"@websublime/*\" lint",
     "build": "pnpm --filter \"@websublime/*\" build",
     "snapshot:version": "changeset version --snapshot",
-    "snapshot:publish": "changeset publish --snapshot",
+    "snapshot:publish": "changeset publish --no-git-tag --tag SNAPSHOT --snapshot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
