fix: test snapshot

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "lint": "pnpm --filter \"@websublime/*\" lint",
     "build": "pnpm --filter \"@websublime/*\" build",
-    "snapshot:version": "changeset version --snapshot",
+    "snapshot:version": "changeset version --tag SNAPSHOT --snapshot",
     "snapshot:publish": "changeset publish --no-git-tag --tag SNAPSHOT --snapshot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
