fix: test snapshot

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -15,10 +15,6 @@
   "useCalculatedVersion": true,
   "snapshot": {
     "useCalculatedVersion": true,
-    "prereleaseTemplate": "{tag}-{commit}"
-  },
-  "___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
-    "updateInternalDependents": "always",
-    "onlyUpdatePeerDependentsWhenOutOfRange": true
+    "prereleaseTemplate": "SNAPSHOT-{commit}"
   }
 }
