--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "scripts": {
     "lint": "pnpm --filter \"@websublime/*\" lint",
     "build": "pnpm --filter \"@websublime/*\" build",
-    "snapshot:version": "changeset version --snapshot SNAPSHOT",
-    "snapshot:publish": "changeset publish --no-git-tag --snapshot SNAPSHOT",
+    "snapshot:version": "changeset version --snapshot",
+    "snapshot:publish": "changeset publish --no-git-tag --snapshot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
