--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,12 +5,12 @@
   "type": "module",
   "scripts": {
     "debug": "NODE_ENV=local NODE_OPTIONS='--enable-source-maps --inspect --loader tsx' node src/any.ts",
-    "dev": "NODE_ENV=development node cli.mjs --watch --serve",
-    "build": "rm -rf ./dist && pnpm clean && pnpm dts && pnpm parse && pnpm types && pnpm clean",
+    "dev": "NODE_ENV=development node development.mjs --watch --serve",
+    "build": "rm -rf ./dist && pnpm parse && pnpm dts && pnpm types && pnpm clean",
     "parse": "NODE_ENV=production node build.mjs",
-    "dts": "tsc --declaration --emitDeclarationOnly",
+    "dts": "tsc --declaration --emitDeclarationOnly --project tsconfig.declaration.json",
     "types": "mkdir dist/docs && api-extractor run --local",
-    "clean": "rm -rf ./declarations && rm -rf ./temp && rm -rf ./tsconfig.tsbuildinfo",
+    "clean": "rm -rf ./temp && rm -rf ./tsconfig.tsbuildinfo && rm -rf tsconfig.declaration.tsbuildinfo",
     "lint": "eslint . --ext .js,.ts,.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -43,14 +43,35 @@
   "exports": {
     ".": {
       "types": "./dist/@types/index.d.ts",
-      "import": "./dist/index.mjs"
-    }
-  },
-  "typesVersion": {
-    "*": {
-      "*": [
-        "./dist/@types/index.d.ts"
-      ]
+      "default": "./dist/index.mjs"
+    },
+    "./version.js": {
+      "types": "./version.d.ts",
+      "default": "./version.mjs"
+    },
+    "./decorators.js": {
+      "types": "./utilities/decorators.d.ts",
+      "default": "./utilities/decorators.mjs"
+    },
+    "./directives.js": {
+      "types": "./utilities/directives.d.ts",
+      "default": "./utilities/directives.mjs"
+    },
+    "./event-controller.js": {
+      "types": "./utilities/event-controller.d.ts",
+      "default": "./utilities/event-controller.mjs"
+    },
+    "./helpers.js": {
+      "types": "./utilities/helpers.d.ts",
+      "default": "./utilities/helpers.mjs"
+    },
+    "./html.js": {
+      "types": "./utilities/html.d.ts",
+      "default": "./utilities/html.mjs"
+    },
+    "./web-component.js": {
+      "types": "./utilities/web-component.d.ts",
+      "default": "./utilities/web-component.mjs"
     }
   },
   "publishConfig": {
