--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -37,41 +37,49 @@
     "url": "https://github.com/miguelramos"
   },
   "license": "ISC",
-  "main": "./dist/index.mjs",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "types": "./dist/@types/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/@types/index.d.ts",
-      "default": "./dist/index.mjs"
+      "default": "./dist/index.js"
     },
     "./version.js": {
       "types": "./version.d.ts",
-      "default": "./version.mjs"
+      "default": "./version.js"
     },
     "./decorators.js": {
       "types": "./utilities/decorators.d.ts",
-      "default": "./utilities/decorators.mjs"
+      "default": "./utilities/decorators.js"
     },
     "./directives.js": {
       "types": "./utilities/directives.d.ts",
-      "default": "./utilities/directives.mjs"
+      "default": "./utilities/directives.js"
     },
     "./event-controller.js": {
       "types": "./utilities/event-controller.d.ts",
-      "default": "./utilities/event-controller.mjs"
+      "default": "./utilities/event-controller.js"
     },
     "./helpers.js": {
       "types": "./utilities/helpers.d.ts",
-      "default": "./utilities/helpers.mjs"
+      "default": "./utilities/helpers.js"
     },
     "./html.js": {
       "types": "./utilities/html.d.ts",
-      "default": "./utilities/html.mjs"
+      "default": "./utilities/html.js"
     },
     "./web-component.js": {
       "types": "./utilities/web-component.d.ts",
-      "default": "./utilities/web-component.mjs"
+      "default": "./utilities/web-component.js"
+    },
+    "./inspect-controller.js": {
+      "types": "./utilities/inspect-controller.d.ts",
+      "default": "./utilities/inspect-controller.js"
+    },
+    "./storage.js": {
+      "types": "./utilities/storage.d.ts",
+      "default": "./utilities/storage.js"
     }
   },
   "publishConfig": {
