feat: core functions and inspect

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "scripts": {
     "lint": "pnpm --filter \"@websublime/*\" lint",
     "build": "pnpm --filter \"@websublime/*\" build",
+    "version": "changeset version",
+    "publish": "changeset publish",
     "snapshot:version": "changeset version --snapshot",
     "snapshot:publish": "changeset publish --no-git-tag --snapshot",
     "test": "echo \"Error: no test specified\" && exit 1"
