--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Feature artifacts
+name: Build and Deploy Snapshots
 
 #on:
 #  push:
@@ -16,7 +16,7 @@ env:
 
 jobs:
   build:
-    name: Snapshot Test
+    name: Snapshot
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code repository
