--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -1,11 +1,13 @@
-name: Build and Deploy Feature artifacts
+name: Build and Deploy Snapshots
 
-on:
-  push:
-    branches-ignore:
-      - $default-branch
-      - 'main'
-      - 'changeset-set-release/**'
+#on:
+#  push:
+#    branches-ignore:
+#      - $default-branch
+#      - 'main'
+#      - 'changeset-set-release/**'
+
+on: workflow_dispatch
 
 env:
   CI: true
@@ -14,7 +16,7 @@ env:
 
 jobs:
   build:
-    name: Snapshot Test
+    name: Snapshot
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code repository
