--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -19,9 +19,8 @@
     "@microsoft/api-documenter": "^7.22.21",
     "@microsoft/api-extractor": "^7.36.0",
     "autoprefixer": "10.4.14",
+    "color-convert": "2.0.1",
     "esbuild": "^0.18.6",
-    "esbuild-plugin-postcss2": "0.1.2",
-    "esbuild-postcss": "0.0.4",
     "glob": "^10.3.0",
     "postcss": "8.4.24",
     "tailwindcss": "3.3.2"
