--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -18,11 +18,18 @@
     "@deanc/esbuild-plugin-postcss": "1.0.2",
     "@microsoft/api-documenter": "^7.22.21",
     "@microsoft/api-extractor": "^7.36.0",
+    "@types/fs-extra": "11.0.1",
+    "@types/node": "20.4.0",
+    "@types/postcss-js": "4.0.1",
+    "@types/postcss-nested": "4.2.3",
     "autoprefixer": "10.4.14",
     "color-convert": "2.0.1",
     "esbuild": "^0.18.6",
+    "fs-extra": "11.1.1",
     "glob": "^10.3.0",
     "postcss": "8.4.24",
+    "postcss-js": "4.0.1",
+    "postcss-nested": "6.0.1",
     "tailwindcss": "3.3.2"
   },
   "keywords": [
