--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -13,6 +13,14 @@
     "lint": "eslint . --ext .js,.ts,.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "color-convert": "2.0.1",
+    "fs-extra": "11.1.1",
+    "postcss": "8.4.24",
+    "postcss-js": "4.0.1",
+    "postcss-nested": "6.0.1",
+    "tailwindcss": "3.3.2"
+  },
   "devDependencies": {
     "@akrc/esbuild-plugin-clean": "^0.1.3",
     "@deanc/esbuild-plugin-postcss": "1.0.2",
@@ -23,14 +31,8 @@
     "@types/postcss-js": "4.0.1",
     "@types/postcss-nested": "4.2.3",
     "autoprefixer": "10.4.14",
-    "color-convert": "2.0.1",
     "esbuild": "^0.18.6",
-    "fs-extra": "11.1.1",
-    "glob": "^10.3.0",
-    "postcss": "8.4.24",
-    "postcss-js": "4.0.1",
-    "postcss-nested": "6.0.1",
-    "tailwindcss": "3.3.2"
+    "glob": "^10.3.0"
   },
   "keywords": [
     "theme",
@@ -49,12 +51,24 @@
   "types": "./dist/@types/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/@types/index.d.ts",
+      "types": "./dist/index.d.ts",
       "default": "./dist/index.js"
     },
     "./version.js": {
       "types": "./version.d.ts",
-      "default": "./version.js"
+      "default": "./dist/version.js"
+    },
+    "./colors.js": {
+      "types": "./colors.d.ts",
+      "default": "./dist/colors.js"
+    },
+    "./themes.js": {
+      "types": "./themes.d.ts",
+      "default": "./dist/themes.js"
+    },
+    "./icons.js": {
+      "types": "./icons.d.ts",
+      "default": "./dist/icons.mjs"
     }
   },
   "publishConfig": {
