--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -2,11 +2,12 @@
   "name": "@websublime/vitamin-theme",
   "version": "0.0.0",
   "description": "Base theme for Vitamin",
+  "type": "module",
   "scripts": {
     "debug": "NODE_ENV=local NODE_OPTIONS='--enable-source-maps --inspect --loader tsx' node src/any.ts",
-    "dev": "pnpm build && node development.js --watch --serve",
+    "dev": "pnpm build && node development.mjs --watch --serve",
     "build": "rm -rf ./dist && pnpm parse && pnpm dts && pnpm types && pnpm clean",
-    "parse": "NODE_ENV=production node build.js",
+    "parse": "NODE_ENV=production node build.mjs",
     "dts": "tsc --declaration --emitDeclarationOnly --project tsconfig.declaration.json",
     "types": "mkdir dist/docs && api-extractor run --local",
     "clean": "rm -rf ./temp && rm -rf ./tsconfig.tsbuildinfo && rm -rf tsconfig.declaration.tsbuildinfo",
@@ -14,23 +15,24 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "esbuild-postcss": "0.0.4",
+    "@tailwindcss/nesting": "0.0.0-insiders.565cd3e",
+    "autoprefixer": "10.4.14",
     "color-convert": "2.0.1",
     "fs-extra": "11.1.1",
     "postcss": "8.4.24",
+    "postcss-import": "15.1.0",
     "postcss-js": "4.0.1",
     "postcss-nested": "6.0.1",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
     "@akrc/esbuild-plugin-clean": "^0.1.3",
-    "@deanc/esbuild-plugin-postcss": "1.0.2",
     "@microsoft/api-documenter": "^7.22.21",
     "@microsoft/api-extractor": "^7.36.0",
     "@types/fs-extra": "11.0.1",
     "@types/node": "20.4.0",
     "@types/postcss-js": "4.0.1",
-    "@types/postcss-nested": "4.2.3",
-    "autoprefixer": "10.4.14",
     "esbuild": "^0.18.6",
     "glob": "^10.3.0"
   },
