feat: basic doc package

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -11,7 +11,7 @@
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": ["@websublime/vitamin-docs"],
+  "ignore": [],
   "useCalculatedVersion": true,
   "snapshot": {
     "useCalculatedVersion": true,
