--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "prettier": "^2.8.8",
     "rome": "12.1.3",
     "simple-git-hooks": "^2.8.1",
+    "typescript": "^5.1.6",
     "yorkie": "2.0.0"
   },
   "simple-git-hooks": {
