--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -19,6 +19,20 @@
     "sharp": "^0.32.1",
     "tailwindcss": "^3.0.24"
   },
+  "keywords": [
+    "docs",
+    "websublime",
+    "astrojs",
+    "ui"
+  ],
+  "author": {
+    "email": "hello@miguelramos.dev",
+    "name": "miguelramos",
+    "url": "https://github.com/miguelramos"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "repository": {
     "type": "git",
     "url": "ssh://git@github.com:websublime/vitamin.git",
